research@grame.fr
====================================================
Copyright GRAME (c) 2009,2010,2011,2012
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR (ANR-08-CORD-010)
====================================================

----------------------------------------------------
Version 0.97
 - bug in parser corrected: \ escape only ' and " chars, otherwise it is literal
 - guido score map makes use of the new guidolib extended mapping API for staff and system
 - chords map correction (corrected by guido engine) 

----------------------------------------------------
Version 0.96
 - switch to v8 javascript engine
 - lua not embedded by default

----------------------------------------------------
Version 0.95
- new 'mouse' 'show/hide' message supported at application level
- graphic signal supports alpha messages at object level
- javascript and lua embedded and supported in inscore scripts
- bug correction in sync delete (introduced with version 0.90)

----------------------------------------------------
Version 0.92
- bug corrected: crash with messages addressed to a signal without argument
- date and duration messages support one arg form using 1 as implicit denominator value 
  the one arg form accepts float values.

----------------------------------------------------
Version 0.91
- bug in sync management corrected (introduced with the new sync parsing scheme)

----------------------------------------------------
Version 0.90
- at application level: osc debug is now 'on' by default
- new scripting features (variables, loops)
- ITL file format change:
  semicolon added at the end of each message
  '//' comment not supported any more
  %' comment char replaced by '!'
  new variables and loop scripting features
  single quote support for strings
  messages adressed to sync node must use the string format
- new 'grid' object for automatic segmentation and mapping
