@@ -13,6 +13,7 @@ It has been supported by the ANR (ANR-08-CORD-010)
 
 ----------------------------------------------------
 Version 0.97
+ - new 'alias' message providing arbitrary OSC addresses support
  - bug in parser corrected: \ escape only ' and " chars, otherwise it is literal
  - guido score map makes use of the new guidolib extended mapping API for staff and system
  - chords map correction (corrected by guido engine) 
